# tcp-command-server

./: LICENSE  README.md
TCPCommandServer/: CMakeLists.txt  Connection.cpp  Connection.h  Error.h  IConnection.h  ListenerSocket.cpp  ListenerSocket.h  Readme  Server.cpp  Server.h  SocketHolder.h  main.cpp
TCPCommandServer/TCPCommandServer/: Connection.cpp  Connection.h  Connections.h  Error.cpp  Error.h  IConnection.h  ListenerSocket.cpp  ListenerSocket.h  Logger.cpp  Logger.h  Server.cpp  Server.h  SocketHolder.h  SystemSignalsHandler.cpp  SystemSignalsHandler.h  main.cpp
TCPCommandServer/TCPCommandServer.xcodeproj/: project.pbxproj
TCPCommandServer/TCPCommandServer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TCPCommandServer/TCPCommandServer.xcodeproj/project.xcworkspace/xcuserdata/valentin.xcuserdatad/: UserInterfaceState.xcuserstate
TCPCommandServer/TCPCommandServer.xcodeproj/xcshareddata/xcschemes/: TCPCommandServer Release.xcscheme  TCPCommandServer.xcscheme
TCPCommandServer/TCPCommandServer.xcodeproj/xcuserdata/valentin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
TCPCommandServer/TCPCommandServer.xcodeproj/xcuserdata/valentin.xcuserdatad/xcschemes/: xcschememanagement.plist
xTCPCommandServer.xcodeproj/: project.pbxproj
xTCPCommandServer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xTCPCommandServer.xcodeproj/project.xcworkspace/xcuserdata/valentin.xcuserdatad/: UserInterfaceState.xcuserstate
xTCPCommandServer.xcodeproj/xcshareddata/xcschemes/: MysqlProxy Release.xcscheme  MysqlProxy.xcscheme
(+2 files in other folders)
